<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>8</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-case</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Case</name>

    <licenses>
        <license>
            <name>Mozilla Public License, Version 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-case-server.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-case-server.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-case-server.git</url>
    </scm>

    <modules>
        <module>case-datasource-client</module>
        <module>case-server</module>
        <module>case-distribution</module>
    </modules>

    <developers>
        <developer>
            <name>Abdelsalem HEDHILI</name>
            <email>abdelsalem.hedhili@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>11</java.version>

        <mockito-inline.version>3.11.1</mockito-inline.version>
        <lombok.version>1.18.24</lombok.version>
        <springboot.version>2.7.3</springboot.version>
        <springdoc-openapi.version>1.5.13</springdoc-openapi.version>
        <spring-cloud.version>2021.0.3</spring-cloud.version>
        <log4j2-mock-version>0.0.2</log4j2-mock-version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <powsybl-dependencies.version>1.3.0</powsybl-dependencies.version>
        <powsybl-ws-commons.version>1.3.0</powsybl-ws-commons.version>
        <testcontainers.version>1.16.2</testcontainers.version>
        <jackson.version>2.13.2.20220328</jackson.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../case-distribution/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <sonar.exclusions>
            **/generated/**/*
        </sonar.exclusions>
    </properties>

    <profiles>
        <profile>
            <id>client</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>case-datasource-client</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->

            <!-- The version 2.10 put by Powsybl cause a problem. spring boot 2.6 needs at least 2.13: https://github.com/FasterXML/jackson-databind/issues/2683 -->
            <!-- java.lang.NoSuchMethodError: 'boolean com.fasterxml.jackson.databind.SerializationConfig.hasExplicitTimeZone()' -->
            <!-- Use the version from spring boot 2.6.6 which contains the fix for the  spring 4 shell CVE -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- imports -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dependencies</artifactId>
                <version>${powsybl-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>de.dentrassi.elasticsearch</groupId>
                <artifactId>log4j2-mock</artifactId>
                <version>${log4j2-mock-version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ws-commons</artifactId>
                <version>${powsybl-ws-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>elasticsearch</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
